--- a/src/access.html
+++ b/src/access.html
@@ -10,7 +10,7 @@
             <div class="col-xs-10">
                 <div class="row">
 
-                    <div class="col-12">
+                    <div class="col-xs-12">
 
                         <div class="title">
                             <div class="svg-icon">
@@ -26,7 +26,7 @@
                                 </svg>
                             </div>
 
-                            <span class="uppercase" data-i18n="access.title">COME ARRIVARE</span>
+                            <span class="uppercase" data-i18n="access.title"></span>
                         </div>
 
                     </div>
