--- a/src/accommodation.html
+++ b/src/accommodation.html
@@ -10,7 +10,7 @@
             <div class="col-xs-10">
                 <div class="row">
 
-                    <div class="col-12 title">
+                    <div class="col-xs-12 title">
 
                         <div class="svg-icon">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="0.44607836464102285" style="width: 45px; height: 100px;">
@@ -25,13 +25,13 @@
                             </svg>
                         </div>
 
-                        <span class="title uppercase" data-i18n="accomodation.title">DOVE DORMIRE</span>
+                        <span class="title uppercase" data-i18n="accomodation.title"></span>
 
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-12 hotels">
+                    <div class="col-xs-12 hotels">
 
                         <div class="hotel">
 
