Fixed accomodation page and added blank visit page

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
     {{> accommodation}}
 </div>
 
+<div id="page-visit" style="display: none;">
+    {{> visit}}
+</div>
+
 <div id="page-map" style="display: none;">
     {{> map}}
 </div>
