--- a/github-prod/index.html
+++ b/github-prod/index.html
@@ -890,11 +890,11 @@
             </div>
     
             <div class="row">
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6m col-description">
                     <div class="col-title text-center bold" data-i18n="[html]visit.left.title"></div>
                     <div data-i18n="[html]visit.left.description"></div>
                 </div>
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6 col-description">
                     <div class="col-title text-center bold" data-i18n="[html]visit.right.title"></div>
                     <div data-i18n="[html]visit.right.description"></div>
                 </div>
