Added honeymoon section

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
 
     {{> info}}
 
-    {{> carousel}}
+    {{> trip}}
+
+    <div id="home-footer">&nbsp;</div>
 </div>
 
 <div id="page-access" style="display: none;">
