Warning for Internet Explorer

--- a/github-prod/index.html
+++ b/github-prod/index.html
@@ -970,6 +970,10 @@
 <div id="page-rsvp" style="display: none;">
     <div class="loading-rsvp" data-i18n="rsvp.loading"></div></div>
 
+<div id="alert-ie">
+    <div class="alert alert-danger" role="alert" data-i18n="[html]ie"></div>
+</div>
+
 <script src="js/main.min.js"></script>
 
 </body>
